--- a/SegmentationCode.ipynb
+++ b/SegmentationCode.ipynb
@@ -155,12 +155,12 @@
     "\n",
     "    # LOCATION LOOKUP\n",
     "    location_name = find_location_for_file(audio_file, id_to_location)\n",
-    "    # Sanitize location name (e.g., \"Davao del Sur\" -> \"DavaodelSur\")\n",
     "    location_clean = \"\".join([c for c in location_name if c.isalnum() or c in (' ', '_', '-')]).strip()\n",
     "    \n",
-    "    print(f\"\\n🎧 Processing: {audio_file}\")\n",
-    "    print(f\"   📍 Location identified: {location_clean}\")\n",
-    "    print(f\"   ↳ Using annotations from: {annotation_file}\")\n",
+    "    print(f\"\\n\" + \"=\"*60)\n",
+    "    print(f\"🎧 Processing: {audio_file}\")\n",
+    "    print(f\"📍 Location identified: {location_clean}\")\n",
+    "    print(f\"=\"*60)\n",
     "\n",
     "    # Load audio\n",
     "    y, sr = librosa.load(audio_path, sr=None)\n",
@@ -210,7 +210,7 @@
     "                if not prev_annots.empty:\n",
     "                    gap = annot_start - prev_annots.iloc[-1]['End Time (s)']\n",
     "                    if gap < MIN_ANNOTATION_GAP and gap > 0:\n",
-    "                        print(f\"   ⏭️  Skipping Selection {annot_selection} (too close: {gap:.2f}s gap)\")\n",
+    "                        # print(f\"   ⏭️  Skipping Selection {annot_selection} (too close: {gap:.2f}s gap)\")\n",
     "                        continue\n",
     "            \n",
     "            # Window calculation (Center)\n",
@@ -252,21 +252,16 @@
     "            else:\n",
     "                current_group_id = overlapping_group\n",
     "            \n",
-    "            # Collect details inside segment\n",
+    "            # Collect details\n",
     "            overlapped = valid_annots[(valid_annots[\"Begin Time (s)\"] < seg_end) & (valid_annots[\"End Time (s)\"] > seg_start)]\n",
     "            annotation_details = []\n",
     "            types = []\n",
     "            selection_numbers = []\n",
-    "            fully_captured_selections = []\n",
     "            \n",
     "            for _, row_ov in overlapped.iterrows():\n",
     "                ov_start = row_ov[\"Begin Time (s)\"]\n",
     "                ov_end = row_ov[\"End Time (s)\"]\n",
-    "                ov_sel = int(row_ov['Selection']) if 'Selection' in row_ov else None\n",
     "                ov_type = str(row_ov[COL_TYPE]).lower()\n",
-    "                \n",
-    "                is_contained = (ov_start >= seg_start and ov_end <= seg_end)\n",
-    "                if is_contained and ov_sel is not None: fully_captured_selections.append(ov_sel)\n",
     "                \n",
     "                if \"long\" in ov_type: ctype = \"long\"\n",
     "                elif \"short\" in ov_type: ctype = \"short\"\n",
@@ -305,14 +300,13 @@
     "            eagle_segments.append(segment_info)\n",
     "            created_segments.append(segment_info)\n",
     "            \n",
-    "            # LOGGING THE EAGLE CREATION\n",
     "            trigger_info = f\"Sel{annot_selection}\"\n",
     "            group_msg = f\" [Group {current_group_id}]\"\n",
     "            print(f\"   ✅ Created: {location_clean}/{label_text} ({trigger_info}){group_msg}\")\n",
     "\n",
     "    print(f\"   📊 Eagle segments created: {len(eagle_segments)}\")\n",
     "    \n",
-    "    # --- DEFICIT LOGGING (RESTORED) ---\n",
+    "    # --- DEFICIT LOGGING ---\n",
     "    num_no_eagle_needed = len(eagle_segments) + no_eagle_deficit\n",
     "    print(f\"   📊 Deficit from previous files: {no_eagle_deficit}\")\n",
     "    print(f\"   ⚖️  Total no-eagle segments needed: {num_no_eagle_needed}\")\n",
@@ -328,7 +322,6 @@
     "            r_start = np.random.uniform(0, max(0, total_duration - SEGMENT_LENGTH))\n",
     "            r_end = min(r_start + SEGMENT_LENGTH, total_duration)\n",
     "            \n",
-    "            # Overlap checks\n",
     "            overlaps_eagle = False\n",
     "            if not valid_annots.empty:\n",
     "                for _, annot in valid_annots.iterrows():\n",
@@ -398,7 +391,7 @@
     "            file_segments.append(seg)\n",
     "            seg_idx += 1\n",
     "\n",
-    "    # --- PER FILE SUMMARY (RESTORED) ---\n",
+    "    # --- PER FILE SUMMARY ---\n",
     "    print(f\"\\n📊 Summary for {audio_file}:\")\n",
     "    for label, count in stats.items():\n",
     "        if count > 0:\n",
@@ -417,7 +410,19 @@
     "        df.to_csv(os.path.join(OUTPUT_FOLDER, manifest_filename), index=False)\n",
     "        print(f\"📋 Manifest saved: {manifest_filename}\")\n",
     "\n",
-    "# --- MASTER SUMMARY (RESTORED) ---\n",
+    "    # ==========================================\n",
+    "    # ⏸️ PAUSE FOR REVIEW (NEW FEATURE)\n",
+    "    # ==========================================\n",
+    "    print(f\"\\n\" + \"-\"*40)\n",
+    "    print(f\"FINISHED PROCESSING: {audio_file}\")\n",
+    "    user_input = input(f\"Press ENTER to process the next file (or type 'q' to quit): \")\n",
+    "    if user_input.lower() == 'q':\n",
+    "        print(\"\\n🛑 Stopping segmentation early per user request.\")\n",
+    "        break\n",
+    "    print(f\"-\"*40 + \"\\n\")\n",
+    "\n",
+    "\n",
+    "# --- MASTER SUMMARY ---\n",
     "if all_segments:\n",
     "    master_df = pd.DataFrame(all_segments)\n",
     "    master_df.to_csv(os.path.join(OUTPUT_FOLDER, \"master_manifest.csv\"), index=False)\n",
