feat: added deficit filler code version 1

--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -6,7 +6,151 @@
    "id": "551b2162",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# ===============================\n",
+    "# USER SETTINGS\n",
+    "# ===============================\n",
+    "# 1. Folder containing the FSC22 Audio files (Source)\n",
+    "NOISE_SOURCE_FOLDER = r\"C:\\Users\\danie\\Downloads\\Audio Wise V1.0\"\n",
+    "\n",
+    "# 2. Path to the FSC22 Metadata CSV\n",
+    "METADATA_PATH = r\"C:\\Users\\danie\\Downloads\\Metadata V1.0 FSC22.csv\"\n",
+    "\n",
+    "# 3. Your EXISTING output folder (Destination)\n",
+    "EXISTING_OUTPUT_FOLDER = r\"C:\\Users\\danie\\Downloads\\LE\\SegmentationAudios\"\n",
+    "\n",
+    "# 4. How many files do you need?\n",
+    "TARGET_DEFICIT = 385 \n",
+    "\n",
+    "# 5. The Allowed Classes\n",
+    "ALLOWED_CLASSES = [\n",
+    "    'Rain', 'Thunderstorm', 'WaterDrops', 'Wind', 'Silence', \n",
+    "    'TreeFalling', 'Whistling', 'Insect', 'Frog', \n",
+    "    'BirdChirping', 'WingFlapping', 'Squirrel'\n",
+    "]\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 1: LOAD & FILTER METADATA\n",
+    "# ===============================\n",
+    "print(\"Loading and filtering metadata...\")\n",
+    "try:\n",
+    "    meta_df = pd.read_csv(METADATA_PATH)\n",
+    "    \n",
+    "    # Filter by class\n",
+    "    filtered_df = meta_df[meta_df['Class Name'].isin(ALLOWED_CLASSES)].copy()\n",
+    "    \n",
+    "    # Shuffle to get a random mix\n",
+    "    filtered_df = filtered_df.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "    \n",
+    "    print(f\"✅ Found {len(filtered_df)} valid noise files.\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error reading metadata: {e}\")\n",
+    "    exit()\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 2: COPY FILES\n",
+    "# ===============================\n",
+    "created_count = 0\n",
+    "segments_data = []\n",
+    "\n",
+    "print(f\"\\n📉 Target to fill: {TARGET_DEFICIT} files\")\n",
+    "print(f\"📂 Copying from: {NOISE_SOURCE_FOLDER}\")\n",
+    "\n",
+    "# Iterate through the filtered list\n",
+    "for index, row in tqdm(filtered_df.iterrows(), total=min(len(filtered_df), TARGET_DEFICIT)):\n",
+    "    if created_count >= TARGET_DEFICIT:\n",
+    "        break\n",
+    "        \n",
+    "    # Get info\n",
+    "    original_filename = str(row['Dataset File']).strip()\n",
+    "    noise_class = str(row['Class Name']).strip()\n",
+    "    \n",
+    "    source_path = os.path.join(NOISE_SOURCE_FOLDER, original_filename)\n",
+    "    \n",
+    "    if not os.path.exists(source_path):\n",
+    "        continue\n",
+    "        \n",
+    "    # Prepare Destination\n",
+    "    # We rename it to keep your dataset clean and organized\n",
+    "    # New Name: GeneralForest_Rain_OriginalName.wav\n",
+    "    new_filename = f\"GeneralForest_{noise_class}_{original_filename}\"\n",
+    "    \n",
+    "    location = \"GeneralForest\"\n",
+    "    label = \"NoEagleSound\"\n",
+    "    \n",
+    "    # Save Folder: Output / GeneralForest / NoEagleSound\n",
+    "    save_folder = os.path.join(EXISTING_OUTPUT_FOLDER, location, label)\n",
+    "    os.makedirs(save_folder, exist_ok=True)\n",
+    "    \n",
+    "    dest_path = os.path.join(save_folder, new_filename)\n",
+    "    \n",
+    "    try:\n",
+    "        # COPY THE FILE (Preserves metadata)\n",
+    "        shutil.copy2(source_path, dest_path)\n",
+    "        \n",
+    "        # Add to manifest data\n",
+    "        segments_data.append({\n",
+    "            'source_audio': original_filename,\n",
+    "            'segment_filename': new_filename,\n",
+    "            'label': label,\n",
+    "            'label_category': label,\n",
+    "            'quality': 'N/A', \n",
+    "            'output_folder': os.path.join(location, label),\n",
+    "            # Since we didn't check duration, we assume it's 5.0s (standard for this dataset)\n",
+    "            'segment_start_time': 0.0,\n",
+    "            'segment_end_time': 5.0,\n",
+    "            'segment_duration': 5.0,\n",
+    "            'trigger_annotation_start': 'N/A',\n",
+    "            'trigger_annotation_end': 'N/A',\n",
+    "            'num_annotations': 0,\n",
+    "            'selection_numbers': 'None',\n",
+    "            'annotation_types': 'None',\n",
+    "            'annotation_times': 'None',\n",
+    "            'individual_call_details': f'External_{noise_class}',\n",
+    "            'group_id': 9999 + created_count,\n",
+    "            'overlap_group_id': 9999 + created_count,\n",
+    "            'location_id': location\n",
+    "        })\n",
+    "        \n",
+    "        created_count += 1\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️ Error copying {original_filename}: {e}\")\n",
+    "        continue\n",
+    "\n",
+    "print(f\"\\n✨ Finished! Copied {created_count} noise files.\")\n",
+    "\n",
+    "# ===============================\n",
+    "# STEP 3: UPDATE MASTER MANIFEST\n",
+    "# ===============================\n",
+    "manifest_path = os.path.join(EXISTING_OUTPUT_FOLDER, \"master_manifest.csv\")\n",
+    "\n",
+    "if segments_data:\n",
+    "    print(\"Updating master_manifest.csv...\")\n",
+    "    try:\n",
+    "        # Load existing manifest\n",
+    "        if os.path.exists(manifest_path):\n",
+    "            existing_df = pd.read_csv(manifest_path)\n",
+    "            new_df = pd.DataFrame(segments_data)\n",
+    "            combined_df = pd.concat([existing_df, new_df], ignore_index=True)\n",
+    "        else:\n",
+    "            combined_df = pd.DataFrame(segments_data)\n",
+    "            \n",
+    "        combined_df.to_csv(manifest_path, index=False)\n",
+    "        print(\"✅ Master manifest updated successfully.\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error updating manifest: {e}\")\n",
+    "        # Backup save\n",
+    "        pd.DataFrame(segments_data).to_csv(os.path.join(EXISTING_OUTPUT_FOLDER, \"added_noise_manifest.csv\"), index=False)\n",
+    "        print(\"   Saved new data to 'added_noise_manifest.csv' instead.\")"
+   ]
   }
  ],
  "metadata": {
