fix: changed file directories

--- a/DeficitFiller.ipynb
+++ b/DeficitFiller.ipynb
@@ -16,13 +16,13 @@
     "# USER SETTINGS\n",
     "# ===============================\n",
     "# 1. Folder containing the FSC22 Audio files (Source)\n",
-    "NOISE_SOURCE_FOLDER = r\"C:\\Users\\danie\\Downloads\\Audio Wise V1.0\"\n",
+    "NOISE_SOURCE_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/Audio Wise V1.0\"\n",
     "\n",
     "# 2. Path to the FSC22 Metadata CSV\n",
-    "METADATA_PATH = r\"C:\\Users\\danie\\Downloads\\Metadata V1.0 FSC22.csv\"\n",
+    "METADATA_PATH = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSetMetadata V1.0 FSC22.csv\"\n",
     "\n",
     "# 3. Your EXISTING output folder (Destination)\n",
-    "EXISTING_OUTPUT_FOLDER = r\"C:\\Users\\danie\\Downloads\\LE\\SegmentationAudios\"\n",
+    "EXISTING_OUTPUT_FOLDER = r\"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/3_SegmentedAudios/NoEagleSound\"\n",
     "\n",
     "# 4. How many files do you need?\n",
     "TARGET_DEFICIT = 385 \n",
