feat: changed master manifest creation, separated the PhilEagle audio to the NoPhilEagle audio to have different manifests.

--- a/SegmentationCode.ipynb
+++ b/SegmentationCode.ipynb
@@ -423,31 +423,133 @@
     "\n",
     "\n",
     "# --- MASTER SUMMARY ---\n",
+    "# --- MASTER SUMMARY WITH SEPARATE MANIFESTS ---\n",
     "if all_segments:\n",
+    "    # Create master DataFrame\n",
     "    master_df = pd.DataFrame(all_segments)\n",
-    "    master_df.to_csv(os.path.join(OUTPUT_FOLDER, \"master_manifest.csv\"), index=False)\n",
-    "    print(\"\\n\" + \"=\"*50)\n",
+    "    \n",
+    "    # Save complete master manifest\n",
+    "    master_path = os.path.join(OUTPUT_FOLDER, \"master_manifest.csv\")\n",
+    "    master_df.to_csv(master_path, index=False)\n",
+    "    print(\"\\n\" + \"=\"*60)\n",
     "    print(\"📋 MASTER MANIFEST SAVED: master_manifest.csv\")\n",
-    "    print(\"=\"*50)\n",
+    "    print(\"=\"*60)\n",
+    "    \n",
+    "    # ==========================================\n",
+    "    # NEW: SEPARATE EAGLE AND NO-EAGLE MANIFESTS\n",
+    "    # ==========================================\n",
+    "    \n",
+    "    # Separate Eagle segments (all types)\n",
+    "    eagle_df = master_df[master_df['label'] != 'NoEagleSound'].copy()\n",
+    "    if not eagle_df.empty:\n",
+    "        eagle_manifest_path = os.path.join(OUTPUT_FOLDER, \"master_manifest_PhilEagle.csv\")\n",
+    "        eagle_df.to_csv(eagle_manifest_path, index=False)\n",
+    "        print(f\"🦅 EAGLE MANIFEST SAVED: master_manifest_PhilEagle.csv\")\n",
+    "        print(f\"   • Contains {len(eagle_df)} eagle segments\")\n",
+    "    \n",
+    "    # Separate NoEagle segments\n",
+    "    no_eagle_df = master_df[master_df['label'] == 'NoEagleSound'].copy()\n",
+    "    if not no_eagle_df.empty:\n",
+    "        no_eagle_manifest_path = os.path.join(OUTPUT_FOLDER, \"master_manifest_NoEagle.csv\")\n",
+    "        no_eagle_df.to_csv(no_eagle_manifest_path, index=False)\n",
+    "        print(f\"🔇 NO-EAGLE MANIFEST SAVED: master_manifest_NoEagle.csv\")\n",
+    "        print(f\"   • Contains {len(no_eagle_df)} no-eagle segments\")\n",
+    "    \n",
+    "    print(\"=\"*60)\n",
+    "    \n",
+    "    # ==========================================\n",
+    "    # DETAILED STATISTICS\n",
+    "    # ==========================================\n",
     "    \n",
     "    print(f\"\\n📊 Overall Statistics:\")\n",
     "    print(f\"   • Total segments: {len(all_segments)}\")\n",
-    "    print(f\"   • Locations found: {master_df['location_id'].unique()}\")\n",
+    "    print(f\"   • Unique locations: {master_df['location_id'].nunique()}\")\n",
+    "    print(f\"   • Location names: {', '.join(master_df['location_id'].unique())}\")\n",
     "    \n",
-    "    print(f\"\\n   By Label:\")\n",
-    "    print(master_df['label'].value_counts().to_string())\n",
+    "    print(f\"\\n   📍 Segments by Location:\")\n",
+    "    location_counts = master_df['location_id'].value_counts()\n",
+    "    for location, count in location_counts.items():\n",
+    "        print(f\"      • {location}: {count} segments\")\n",
     "    \n",
-    "    eagle_total = len(master_df[master_df['label'] != 'NoEagleSound'])\n",
-    "    no_eagle_total = len(master_df[master_df['label'] == 'NoEagleSound'])\n",
+    "    print(f\"\\n   🦅 Eagle Segments by Type:\")\n",
+    "    if not eagle_df.empty:\n",
+    "        eagle_type_counts = eagle_df['label'].value_counts()\n",
+    "        for label, count in eagle_type_counts.items():\n",
+    "            percentage = (count / len(eagle_df)) * 100\n",
+    "            print(f\"      • {label}: {count} ({percentage:.1f}%)\")\n",
+    "    \n",
+    "    print(f\"\\n   🔇 No-Eagle Segments:\")\n",
+    "    no_eagle_total = len(no_eagle_df)\n",
+    "    print(f\"      • NoEagleSound: {no_eagle_total}\")\n",
+    "    \n",
+    "    # ==========================================\n",
+    "    # BALANCE ANALYSIS\n",
+    "    # ==========================================\n",
+    "    \n",
+    "    eagle_total = len(eagle_df)\n",
+    "    \n",
+    "    print(f\"\\n   ⚖️  Dataset Balance:\")\n",
+    "    print(f\"      • Total Eagle: {eagle_total} segments\")\n",
+    "    print(f\"      • Total No-Eagle: {no_eagle_total} segments\")\n",
     "    \n",
     "    if no_eagle_deficit > 0:\n",
     "        print(f\"\\n   ⚠️  FINAL DEFICIT: {no_eagle_deficit} no-eagle segments still needed!\")\n",
+    "        print(f\"   ⚠️  Dataset is imbalanced by {no_eagle_deficit} segments.\")\n",
+    "        actual_balance = (eagle_total / (eagle_total + no_eagle_total)) * 100 if (eagle_total + no_eagle_total) > 0 else 0\n",
+    "        print(f\"      • Actual Balance: {actual_balance:.1f}% Eagle / {100-actual_balance:.1f}% No Eagle\")\n",
     "    else:\n",
     "        if eagle_total + no_eagle_total > 0:\n",
     "            eagle_pct = (eagle_total / (eagle_total + no_eagle_total)) * 100\n",
-    "            print(f\"\\n   ✅ Perfect Balance: {eagle_pct:.1f}% Eagle / {100-eagle_pct:.1f}% No Eagle\")\n",
+    "            print(f\"      ✅ Perfect Balance: {eagle_pct:.1f}% Eagle / {100-eagle_pct:.1f}% No Eagle\")\n",
+    "    \n",
+    "    # ==========================================\n",
+    "    # QUALITY DISTRIBUTION (from metadata)\n",
+    "    # ==========================================\n",
+    "    \n",
+    "    if 'quality' in eagle_df.columns:\n",
+    "        print(f\"\\n   🎨 Eagle Segments by Quality:\")\n",
+    "        quality_counts = eagle_df['quality'].value_counts()\n",
+    "        for quality, count in quality_counts.items():\n",
+    "            percentage = (count / len(eagle_df)) * 100\n",
+    "            print(f\"      • {quality}: {count} ({percentage:.1f}%)\")\n",
+    "    \n",
+    "    # ==========================================\n",
+    "    # OVERLAP GROUP ANALYSIS\n",
+    "    # ==========================================\n",
+    "    \n",
+    "    if 'group_id' in master_df.columns:\n",
+    "        total_groups = master_df['group_id'].nunique()\n",
+    "        segments_in_groups = master_df.groupby('group_id').size()\n",
+    "        overlapping_groups = segments_in_groups[segments_in_groups > 1]\n",
+    "        \n",
+    "        print(f\"\\n   🔗 Overlap Group Analysis:\")\n",
+    "        print(f\"      • Total unique groups: {total_groups}\")\n",
+    "        print(f\"      • Groups with overlapping segments: {len(overlapping_groups)}\")\n",
+    "        if len(overlapping_groups) > 0:\n",
+    "            max_overlap = overlapping_groups.max()\n",
+    "            print(f\"      • Maximum segments in one group: {max_overlap}\")\n",
+    "            print(f\"      ⚠️  Remember to use group_id for train/test splitting!\")\n",
+    "    \n",
+    "    # ==========================================\n",
+    "    # FILE SUMMARY\n",
+    "    # ==========================================\n",
+    "    \n",
+    "    print(f\"\\n📁 Generated Files:\")\n",
+    "    print(f\"   • master_manifest.csv - Complete dataset ({len(master_df)} rows)\")\n",
+    "    if not eagle_df.empty:\n",
+    "        print(f\"   • master_manifest_PhilEagle.csv - Eagle only ({len(eagle_df)} rows)\")\n",
+    "    if not no_eagle_df.empty:\n",
+    "        print(f\"   • master_manifest_NoEagle.csv - NoEagle only ({len(no_eagle_df)} rows)\")\n",
+    "    print(f\"   • Individual file manifests - One per processed audio file\")\n",
+    "    \n",
+    "    print(\"\\n💡 USAGE TIPS:\")\n",
+    "    print(\"   • Use master_manifest.csv for complete overview\")\n",
+    "    print(\"   • Use master_manifest_PhilEagle.csv to analyze eagle call patterns\")\n",
+    "    print(\"   • Use master_manifest_NoEagle.csv to verify background sound diversity\")\n",
+    "    print(\"   • Always use 'group_id' for stratified train/test splitting!\")\n",
     "\n",
-    "print(\"\\n🎉 All audio files segmented successfully!\")"
+    "print(\"\\n🎉 All audio files segmented successfully!\")\n",
+    "print(\"=\"*60)"
    ]
   }
  ],
